// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Tests TagItem Default 1`] = `
<div
  data-dark={false}
>
  <a
    className="charcoal-tag-item"
    data-pressed={false}
    data-size="M"
    data-state="default"
    onClick={[Function]}
    onDragStart={[Function]}
    onKeyDown={[Function]}
    onMouseDown={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchCancel={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
  >
    <div
      aria-hidden="true"
      className="charcoal-tag-item__bg"
      data-state="default"
      data-variant="color"
      style={
        Object {
          "--charcoal-tag-item-bg": "#7ACCB1",
        }
      }
    />
    <div
      className="charcoal-tag-item__inner"
    >
      <div
        className="charcoal-tag-item__label-wrapper"
        data-has-translate-label={false}
      >
        <span
          className="charcoal-tag-item-text charcoal-tag-item__label "
          data-has-translate-label={false}
        >
          #女の子
        </span>
      </div>
    </div>
  </a>
</div>
`;

exports[`Storybook Tests TagItem Playground 1`] = `
.c0 {
  display: grid;
  grid-template-columns: repeat(4,1fr);
}

.c0 > div {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  padding: 1em;
}

<div
  data-dark={false}
>
  <div>
    <div
      className="c0"
    >
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="M"
          data-state="default"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="default"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={false}
            >
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={false}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div />
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="M"
          data-state="default"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="default"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={true}
            >
              <span
                className="charcoal-tag-item__translated-label charcoal-tag-item-text"
              >
                girl
              </span>
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={true}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div />
    </div>
    <div
      className="c0"
    >
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="M"
          data-state="active"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="active"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={false}
            >
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={false}
              >
                #女の子
              </span>
            </div>
            <pixiv-icon
              name="16/Remove"
            />
          </div>
        </a>
      </div>
      <div />
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="M"
          data-state="active"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="active"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={true}
            >
              <span
                className="charcoal-tag-item__translated-label charcoal-tag-item-text"
              >
                girl
              </span>
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={true}
              >
                #女の子
              </span>
            </div>
            <pixiv-icon
              name="16/Remove"
            />
          </div>
        </a>
      </div>
      <div />
    </div>
    <div
      className="c0"
    >
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="M"
          data-state="inactive"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="inactive"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={false}
            >
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={false}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
        <a
          aria-disabled={true}
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="M"
          data-state="inactive"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="inactive"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={false}
            >
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={false}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="M"
          data-state="inactive"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="inactive"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={true}
            >
              <span
                className="charcoal-tag-item__translated-label charcoal-tag-item-text"
              >
                girl
              </span>
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={true}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
        <a
          aria-disabled={true}
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="M"
          data-state="inactive"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="inactive"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={true}
            >
              <span
                className="charcoal-tag-item__translated-label charcoal-tag-item-text"
              >
                girl
              </span>
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={true}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="c0"
    >
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="S"
          data-state="default"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="default"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={false}
            >
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={false}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
    <div
      className="c0"
    >
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="S"
          data-state="active"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="active"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={false}
            >
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={false}
              >
                #女の子
              </span>
            </div>
            <pixiv-icon
              name="16/Remove"
            />
          </div>
        </a>
      </div>
    </div>
    <div
      className="c0"
    >
      <div>
        <a
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="S"
          data-state="inactive"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="inactive"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={false}
            >
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={false}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
      <div>
        <a
          aria-disabled={true}
          className="charcoal-tag-item"
          data-pressed={false}
          data-size="S"
          data-state="inactive"
          onClick={[Function]}
          onDragStart={[Function]}
          onKeyDown={[Function]}
          onMouseDown={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchCancel={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          <div
            aria-hidden="true"
            className="charcoal-tag-item__bg"
            data-state="inactive"
            data-variant="color"
            style={
              Object {
                "--charcoal-tag-item-bg": "#7ACCB1",
              }
            }
          />
          <div
            className="charcoal-tag-item__inner"
          >
            <div
              className="charcoal-tag-item__label-wrapper"
              data-has-translate-label={false}
            >
              <span
                className="charcoal-tag-item-text charcoal-tag-item__label "
                data-has-translate-label={false}
              >
                #女の子
              </span>
            </div>
          </div>
        </a>
      </div>
    </div>
  </div>
</div>
`;
